* BUG#7412 Allow to renew contract in contract set if the other is not active

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add functions to generate schedule on contract set

Version 1.3 - 2015-01-22
* FEA#0000 Add one per set on fee
* FEA#0000 Module creation